# web-monitor

./: Cargo.toml
src/: arguments.rs  check.rs  config.rs  lib.rs  main.rs  notifiers.rs  testutils.rs  website.rs
src/arguments/: tests.rs
src/config/: tests.rs
testdata/: example_notifier.yml  example_only_url.yml  example_only_url_empty_globals.yml  example_only_url_unsupported_globals.yml
