[package]
name = "web-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
reqwest = { version = "0.11" }
clap = { version = "3.2", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
teloxide = "0.11"
crossterm = { version = "0.25", features = ["event-stream"] }
futures = "0.3"

[dev-dependencies]
#warp = "0.3"

[[bin]]
name = "tgtest"

[[bin]]
name = "tuitest"

[[bin]]
name = "async-tui"
